--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
+ "scripts": {
   "dev": "next dev",
   "build": "next build",
-  "build:static": "next build && next export",
+  "build:static": "next build",                
   "start": "next start",
   "lint": "next lint"
 },
+
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
